objects/tffa__ApplicationScoringMatrix__c.object
<CustomObject>
    <description>A  matrix that represents business rules for scoring applications. It has 2 parts - facts and outcomes. Facts are a set of fields that form the criteria and represent the business rule condition. e.g. productCategory = Checking, Amount &lt; 1000, etc. Outcomes are a set of fields that represent the business rule action (score). e.g. 50, 80. Scoring  is typically done help the financial institution make effective automated decisions about the application. e.g. for abandoned applications it can influence the order in which the applications get picked up for followup (high score ones are picked first).</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AmountFrom__c</fullName>
        <description>The amount (lower bound) applied captured for the application. This nature of the amount depends on the nature of the product applied. A fact.</description>
        <label>Amount (from)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__AmountTo__c</fullName>
        <description>The amount (upper bound) applied captured for the application. This nature of the amount depends on the nature of the product applied. A fact.</description>
        <label>Amount (to)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>The brand code under which the application was started. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;123;456;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ChannelSet__c</fullName>
        <description>The channel via which the application was started. Supports multiple. A fact.</description>
        <label>Channel (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LocationCodeSet__c</fullName>
        <description>The location (branch) code associated with the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;XXX;B01;</inlineHelpText>
        <label>Location code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OfferCodeSet__c</fullName>
        <description>The offer code of the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;P-01;P-02;</inlineHelpText>
        <label>Offer Code Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the primary applicant of the application in the financial institution. A fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartySegmentSet__c</fullName>
        <description>The segment to which the primary applicant of the application belongs. Supports multiple. A fact.</description>
        <label>Party segment (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartySegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategorySet__c</fullName>
        <description>The product category of the application. Supports multiple. A fact.</description>
        <label>Product category (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCodeSet__c</fullName>
        <description>The product code of the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;P-01;P-02;</inlineHelpText>
        <label>Product code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PromotionCodeSet__c</fullName>
        <description>The promotion code applied on the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;PROMO-01;PROMO-02;</inlineHelpText>
        <label>Promotion code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Score__c</fullName>
        <description>A plausible score for the application based on the business rule conditions (or facts). An outcome.</description>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order (or priority) of the records (or rules). Records with lower sortOrder values are given higher priority and are selected first.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StateSet__c</fullName>
        <description>The state of the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;PersonalInfo;</inlineHelpText>
        <label>State (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__StatusSet__c</fullName>
        <description>The status of the application. Supports multiple (semicolon separated). A fact.</description>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;ABANDONED;</inlineHelpText>
        <label>Status (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Application Scoring Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__AmountFrom__c</columns>
        <columns>tffa__AmountTo__c</columns>
        <columns>tffa__ChannelSet__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Scoring Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>